--- a/compass_user/package.json
+++ b/compass_user/package.json
@@ -12,9 +12,9 @@
   "dependencies": {
     "@react-native-firebase/app": "^19.1.0",
     "@react-native-firebase/auth": "^19.1.0",
+    "@react-native-google-signin/google-signin": "^11.0.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
-    "@rnmapbox/maps": "^10.1.19",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-gesture-handler": "^2.15.0",
