--- a/compass_user/package.json
+++ b/compass_user/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/geolocation": "^3.2.1",
     "@react-native-firebase/app": "^19.1.0",
     "@react-native-firebase/auth": "^19.1.0",
     "@react-native-google-signin/google-signin": "^11.0.1",
@@ -18,6 +19,7 @@
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-gesture-handler": "^2.15.0",
+    "react-native-maps": "^1.14.0",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "react-native-vector-icons": "^10.0.3"
