--- a/compass_user/package.json
+++ b/compass_user/package.json
@@ -17,10 +17,11 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "react": "18.2.0",
-    "react-native": "0.73.6",
+    "react-native": "^0.74.0",
+    "react-native-clean-project": "^4.0.3",
     "react-native-gesture-handler": "^2.15.0",
     "react-native-maps": "^1.14.0",
-    "react-native-safe-area-context": "^4.9.0",
+    "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.29.0",
     "react-native-vector-icons": "^10.0.3"
   },
@@ -28,10 +29,10 @@
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
-    "@react-native/babel-preset": "0.73.21",
-    "@react-native/eslint-config": "0.73.2",
-    "@react-native/metro-config": "0.73.5",
-    "@react-native/typescript-config": "0.73.1",
+    "@react-native/babel-preset": "0.74.81",
+    "@react-native/eslint-config": "0.74.81",
+    "@react-native/metro-config": "0.74.81",
+    "@react-native/typescript-config": "0.74.81",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
