--- a/compass_user/android/app/build.gradle
+++ b/compass_user/android/app/build.gradle
@@ -86,10 +86,10 @@ android {
     signingConfigs {
         release {
             if (project.hasProperty('MYAPP_UPLOAD_STORE_FILE')) {
-                storeFile file(MYAPP_UPLOAD_STORE_FILE)
-                storePassword MYAPP_UPLOAD_STORE_PASSWORD
-                keyAlias MYAPP_UPLOAD_KEY_ALIAS
-                keyPassword MYAPP_UPLOAD_KEY_PASSWORD
+                storeFile file(System.getenv("MYAPP_UPLOAD_STORE_FILE"))
+                keyAlias System.getenv("MYAPP_UPLOAD_KEY_ALIAS")
+                storePassword System.getenv("MYAPP_UPLOAD_STORE_PASSWORD")
+                keyPassword System.getenv("MYAPP_UPLOAD_KEY_PASSWORD")
             }
         }
         debug {
