--- a/compass_main/android/build.gradle
+++ b/compass_main/android/build.gradle
@@ -6,6 +6,7 @@ buildscript {
         targetSdkVersion = 34
         ndkVersion = "26.1.10909125"
         kotlinVersion = "1.9.22"
+        googlePlayServicesAuthVersion = "20.7.0" // <--- use this version or newer
     }
     repositories {
         google()
@@ -15,6 +16,12 @@ buildscript {
         classpath("com.android.tools.build:gradle")
         classpath("com.facebook.react:react-native-gradle-plugin")
         classpath("org.jetbrains.kotlin:kotlin-gradle-plugin")
+
+        // NOTE: if you are on react-native 0.71 or below, you must not update
+        //       the google-services plugin past version 4.3.15 as it requires gradle >= 7.3.0
+        classpath 'com.google.gms:google-services:4.4.1'
+        // Add me --- /\
+        classpath "com.google.android.libraries.mapsplatform.secrets-gradle-plugin:secrets-gradle-plugin:2.0.1"
     }
 }
 
