--- a/compass_main/package.json
+++ b/compass_main/package.json
@@ -11,9 +11,14 @@
   },
   "dependencies": {
     "@react-native-firebase/app": "^20.3.0",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.4.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-gesture-handler": "^2.18.1",
     "react-native-maps": "^1.17.3",
+    "react-native-safe-area-context": "^4.10.8",
+    "react-native-screens": "^3.34.0",
     "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
