--- a/compass_user/package.json
+++ b/compass_user/package.json
@@ -20,6 +20,7 @@
     "react": "18.2.0",
     "react-native": "^0.74.3",
     "react-native-clean-project": "^4.0.3",
+    "react-native-config": "^1.5.3",
     "react-native-gesture-handler": "^2.15.0",
     "react-native-maps": "^1.14.0",
     "react-native-safe-area-context": "^4.10.1",
