--- a/compass_admin/package.json
+++ b/compass_admin/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@vis.gl/react-google-maps": "^1.1.0",
     "firebase": "^10.13.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -41,6 +42,7 @@
   },
   "devDependencies": {
     "daisyui": "^4.12.10",
+    "dotenv": "^16.4.5",
     "tailwindcss": "^3.4.10"
   }
 }
