--- a/compass_main/package.json
+++ b/compass_main/package.json
@@ -15,11 +15,13 @@
     "@react-native-firebase/app": "^20.3.0",
     "@react-native-firebase/auth": "^20.3.0",
     "@react-native-firebase/firestore": "^20.3.0",
+    "@react-native-firebase/storage": "^20.3.0",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "react": "18.3.1",
     "react-native": "0.75.2",
     "react-native-gesture-handler": "^2.18.1",
+    "react-native-image-picker": "^7.1.2",
     "react-native-maps": "^1.17.3",
     "react-native-safe-area-context": "^4.10.9",
     "react-native-screens": "^3.34.0",
