--- a/compass_user/package.json
+++ b/compass_user/package.json
@@ -25,7 +25,9 @@
     "react-native-maps": "^1.17.3",
     "react-native-safe-area-context": "^4.10.9",
     "react-native-screens": "^3.34.0",
-    "react-native-vector-icons": "^10.1.0"
+    "react-native-svg": "^15.7.1",
+    "react-native-vector-icons": "^10.1.0",
+    "react-native-vision-camera": "^4.5.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
