--- a/compass_main/package.json
+++ b/compass_main/package.json
@@ -23,8 +23,10 @@
     "react-native-gesture-handler": "^2.18.1",
     "react-native-image-picker": "^7.1.2",
     "react-native-maps": "^1.17.3",
+    "react-native-qrcode-svg": "^6.3.2",
     "react-native-safe-area-context": "^4.10.9",
     "react-native-screens": "^3.34.0",
+    "react-native-svg": "^15.7.1",
     "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
