--- a/compass_user/package.json
+++ b/compass_user/package.json
@@ -14,6 +14,7 @@
     "@react-native-firebase/app": "^20.3.0",
     "@react-native-firebase/auth": "^20.3.0",
     "@react-native-firebase/firestore": "^20.3.0",
+    "@react-native-firebase/messaging": "^20.3.0",
     "@react-native-google-signin/google-signin": "^11.0.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
