--- a/compass_user/android/app/src/main/AndroidManifest.xml
+++ b/compass_user/android/app/src/main/AndroidManifest.xml
@@ -19,7 +19,9 @@
         android:label="@string/app_name"
         android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|screenSize|smallestScreenSize|uiMode"
         android:launchMode="singleTask"
-        android:windowSoftInputMode="adjustPan" 
+        android:windowSoftInputMode="adjustPan"
+        android:showWhenLocked="true"
+        android:turnScreenOn="true"
         android:exported="true">
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
