--- a/compass_user/package.json
+++ b/compass_user/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@notifee/react-native": "^9.0.2",
     "@react-native-community/geolocation": "^3.3.0",
     "@react-native-firebase/app": "^20.3.0",
     "@react-native-firebase/auth": "^20.3.0",
