--- a/compass_user/package.json
+++ b/compass_user/package.json
@@ -19,6 +19,7 @@
     "@react-native-google-signin/google-signin": "^11.0.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
+    "axios": "^1.7.7",
     "react": "18.3.1",
     "react-native": "0.75.3",
     "react-native-clean-project": "^4.0.3",
@@ -29,7 +30,8 @@
     "react-native-screens": "^3.34.0",
     "react-native-svg": "^15.7.1",
     "react-native-vector-icons": "^10.1.0",
-    "react-native-vision-camera": "^4.5.3"
+    "react-native-vision-camera": "^4.5.3",
+    "react-native-webview": "^13.12.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
