--- a/compass_main/package.json
+++ b/compass_main/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/stack": "^6.4.1",
     "react": "18.3.1",
     "react-native": "0.75.2",
+    "react-native-element-dropdown": "^2.12.1",
     "react-native-gesture-handler": "^2.18.1",
     "react-native-image-picker": "^7.1.2",
     "react-native-maps": "^1.17.3",
