--- a/compass_main/package.json
+++ b/compass_main/package.json
@@ -23,6 +23,7 @@
     "react-native": "0.75.2",
     "react-native-element-dropdown": "^2.12.1",
     "react-native-gesture-handler": "^2.18.1",
+    "react-native-heroicons": "^4.0.0",
     "react-native-image-picker": "^7.1.2",
     "react-native-maps": "^1.17.3",
     "react-native-qrcode-svg": "^6.3.2",
