--- a/compass_user/package.json
+++ b/compass_user/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@notifee/react-native": "^9.0.2",
+    "@react-native-clipboard/clipboard": "^1.14.2",
     "@react-native-community/geolocation": "^3.3.0",
     "@react-native-firebase/app": "^20.3.0",
     "@react-native-firebase/auth": "^20.3.0",
@@ -25,6 +26,7 @@
     "react-native-clean-project": "^4.0.3",
     "react-native-config": "^1.5.3",
     "react-native-gesture-handler": "^2.15.0",
+    "react-native-heroicons": "^4.0.0",
     "react-native-maps": "^1.17.3",
     "react-native-safe-area-context": "^4.10.9",
     "react-native-screens": "^3.34.0",
