--- a/compass_user/package.json
+++ b/compass_user/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.7.7",
     "react": "18.3.1",
     "react-native": "0.75.3",
+    "react-native-bouncy-checkbox": "^4.1.2",
     "react-native-clean-project": "^4.0.3",
     "react-native-config": "^1.5.3",
     "react-native-gesture-handler": "^2.15.0",
