--- a/compass_admin/package.json
+++ b/compass_admin/package.json
@@ -12,9 +12,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@vis.gl/react-google-maps": "^1.1.0",
+    "chart.js": "^4.4.6",
     "dayjs": "^1.11.13",
     "firebase": "^10.13.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-csv": "^2.2.2",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
