--- a/compass_main/package.json
+++ b/compass_main/package.json
@@ -19,6 +19,7 @@
     "@react-native-firebase/storage": "^20.3.0",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
+    "moment": "^2.30.1",
     "react": "18.3.1",
     "react-native": "0.75.2",
     "react-native-element-dropdown": "^2.12.1",
