--- a/compass_user/package.json
+++ b/compass_user/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@notifee/react-native": "^9.0.2",
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-clipboard/clipboard": "^1.14.2",
     "@react-native-community/geolocation": "^3.3.0",
     "@react-native-firebase/app": "^20.3.0",
