--- a/compass_main/package.json
+++ b/compass_main/package.json
@@ -27,6 +27,7 @@
     "react-native-heroicons": "^4.0.0",
     "react-native-image-picker": "^7.1.2",
     "react-native-maps": "^1.17.3",
+    "react-native-nfc-manager": "^3.16.0",
     "react-native-qrcode-svg": "^6.3.2",
     "react-native-safe-area-context": "^4.10.9",
     "react-native-screens": "^3.34.0",
