--- a/compass_admin/package.json
+++ b/compass_admin/package.json
@@ -16,6 +16,7 @@
     "dayjs": "^1.11.13",
     "firebase": "^10.13.0",
     "gmail-send": "^1.8.14",
+    "qrcode.react": "^4.1.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-csv": "^2.2.2",
