--- a/compass_user/package.json
+++ b/compass_user/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.7",
+    "moment": "^2.30.1",
     "react": "18.3.1",
     "react-native": "0.75.3",
     "react-native-bouncy-checkbox": "^4.1.2",
