--- a/compass_main/package.json
+++ b/compass_main/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@notifee/react-native": "^9.1.2",
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/geolocation": "^3.3.0",
     "@react-native-firebase/app": "^20.3.0",
