--- a/compass_main/package.json
+++ b/compass_main/package.json
@@ -23,6 +23,7 @@
     "moment": "^2.30.1",
     "react": "18.3.1",
     "react-native": "0.75.2",
+    "react-native-config": "^1.5.3",
     "react-native-element-dropdown": "^2.12.1",
     "react-native-gesture-handler": "^2.18.1",
     "react-native-heroicons": "^4.0.0",
